:books: docs: update .env example

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ DATABASE_URL="postgres database url on heroku" -> PROD mode only
 PORT="local port" -> DEV mode only
 POSTGRES_USERNAME="postgres username" -> DEV mode only
 POSTGRES_PASSWORD="postgres password" -> DEV mode only
-POSTGRES_DATABASE="database name usually='drivenpass'" -> DEV mode only
+POSTGRES_DATABASE="database name usually='repoprovas'" -> DEV mode only
 
 JWT_SECRET_KEY="JWT key. Need to config also on heroku" -> DEV and PROD mode
 SECRET_KEY_CRYPTR="Cryptr key. Need to config also on heroku" -> DEV and PROD mode
