--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "projeto20-repoprovas",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc && npx prisma generate && npx prisma migrate deploy",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --no-cache"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "@prisma/client": "^4.3.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
@@ -28,11 +29,16 @@
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.0.2",
     "@types/joi": "^17.2.3",
     "@types/pg": "^8.6.5",
+    "@types/supertest": "^2.0.12",
     "chalk": "^5.0.1",
+    "jest": "^29.0.3",
     "prettier": "^2.7.1",
     "prisma": "^4.3.1",
+    "supertest": "^6.2.4",
+    "ts-jest": "^29.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
