--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc && npx prisma generate && npx prisma migrate deploy",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest -i --no-cache"
   },
   "keywords": [],
@@ -16,7 +16,6 @@
     "@prisma/client": "^4.3.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
@@ -34,6 +33,7 @@
     "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
     "chalk": "^5.0.1",
+    "cross-env": "^7.0.3",
     "jest": "^29.0.3",
     "prettier": "^2.7.1",
     "prisma": "^4.3.1",
