--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "projeto20-repoprovas",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc && npx prisma generate && npx prisma migrate deploy",
-    "start": "node dist/index.js",
+    "start": "node dist/index.ts",
     "dev": "nodemon",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest -i --no-cache"
   },
@@ -33,7 +32,7 @@
     "@types/joi": "^17.2.3",
     "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
-    "chalk": "^5.0.1",
+    "chalk": "^4.1.2",
     "cross-env": "^7.0.3",
     "jest": "^29.0.3",
     "prettier": "^2.7.1",
