--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "esModuleInterop": true,
-    "module": "es6",
+    "module": "CommonJS",
+    "target": "ES2022",
     "moduleResolution": "node",
     "outDir": "dist"
   },
